--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "company-website",
   "version": "1.0.0",
-  "description": "",
+  "description": "Web design and development",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,6 +18,18 @@
   "homepage": "https://github.com/VisualEmotion/company-website#readme",
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "normalize.css": "^7.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.7.7",
+    "browser-sync": "^2.18.8",
+    "gulp": "^3.9.1",
+    "gulp-watch": "^4.3.11",
+    "gulp-postcss": "^6.4.0",
+    "postcss-import": "^9.1.0",
+    "postcss-mixins": "^5.4.1",
+    "postcss-nested": "^1.0.1",
+    "postcss-simple-vars": "^3.1.0"
   }
 }
